Fixed group list scroll viewport memory overflow

--- a/public/static/css/tailwind.css
+++ b/public/static/css/tailwind.css
@@ -1349,6 +1349,14 @@ video {
 
 /* ___________________________________________ */
 
+.invisible {
+  visibility: hidden;
+}
+
+.collapse {
+  visibility: collapse;
+}
+
 .fixed {
   position: fixed;
 }
